--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
   <script type="text/javascript">
     function openVideoNow(videoPath) {
       var videoID = videoPath;
-      var embed =  '<iframe width="960" height="540" src="//www.youtube.com/embed/'+videoID+'?rel=0&amp;controls=1&amp;showinfo=0&autoplay=1&iv_load_policy=3&hd=1&version=3" frameborder="0" allowfullscreen></iframe>';
+      var embed =  '<iframe width="960" height="540" src="//www.youtube.com/embed/'+videoID+'?rel=0&amp;controls=0&amp;showinfo=0&autoplay=1&iv_load_policy=3&hd=1&version=3&modestbranding=1" frameborder="0" allowfullscreen></iframe>';
       $('#popupVideo .video').html(embed);
       $('#popupVideo').modal({
         backdrop: 'static',
